[package]
name = "rask-log-forwarder"
version = "0.1.0"
edition = "2024"

[lib]
name = "rask_log_forwarder"
path = "src/lib.rs"

[[bin]]
name = "rask-log-forwarder"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.52.3", features = ["full"] }

# Docker API client (ssl feature uses rustls, not OpenSSL)
bollard = { version = "0.21.0", features = ["time", "ssl"] }

# Zero-copy bytes
bytes = "1.12.0"

# SIMD JSON parsing
simd-json = { version = "0.17.1", features = ["serde_impl"] }

# HTTP client (using rustls for portability)
hyper = { version = "1.10.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["client", "http1", "client-legacy"] }
http-body-util = "0.1.3"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "gzip", "rustls"] }
url = "2.5.8"

# Async utilities
parking_lot = "0.12.5"

# CLI parsing
clap = { version = "4.6.1", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
bincode = { version = "2.0.1", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0.18"

# Time handling
chrono = { version = "0.4.45", features = ["serde"] }

# Regular expressions
regex = "1.12.4"

# Memory arena allocation
bumpalo = "3.20.3"

# Stream utilities
futures = "0.3.32"

# Async cancellation
tokio-util = "0.7"

# Compression
flate2 = "1.1.9"

# Disk fallback (optional)
sled = { version = "0.34.7", optional = true }

# Metrics (optional)
prometheus = { version = "0.14.0", optional = true }
warp = { version = "0.4.3", features = ["server"], optional = true }

# Random number generation for jitter
rand = "0.10.2"

# Hostname detection
hostname = "0.4.2"

# gRPC (optional)
tonic = { version = "0.14.6", optional = true }
prost = { version = "0.14.4", optional = true }

# OTLP (optional)
opentelemetry-proto = { version = "0.32", features = ["gen-tonic", "logs"], optional = true }
prost-types = { version = "0.14.4", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tokio-test = "0.4.5"
tempfile = "3.27.0"
mockall = "0.15.0"
wiremock = "0.6"
httpmock = "0.8.3"
chrono = { version = "0.4.45", features = ["serde"] }
serial_test = "3.5.0"

[build-dependencies]
regex = "1.12.4"

[features]
default = ["disk-fallback", "metrics"]
disk-fallback = ["sled"]
metrics = ["prometheus", "warp"]
grpc = ["tonic", "prost"]
otlp = ["opentelemetry-proto", "prost", "prost-types", "hex"]

[[bench]]
name = "parser_benchmarks"
path = "benches/parser_benchmarks.rs"
harness = false

[[bench]]
name = "throughput_benchmarks"
path = "benches/buffer/throughput_benchmarks.rs"
harness = false

[[bench]]
name = "memory_benchmarks"
path = "benches/buffer/memory_benchmarks.rs"
harness = false

[[bench]]
name = "otlp_benchmarks"
path = "benches/otlp_benchmarks.rs"
harness = false
required-features = ["otlp"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
overflow-checks = true

[lints.clippy]
# `pedantic` is deliberately not blanket-enabled here: lib.rs already denies a
# hand-picked subset of pedantic lints and allows the noisy rest with reasons.
# Enabling the full group here would additionally promote every unreviewed
# pedantic lint to a hard error via `#![deny(warnings)]` in lib.rs.
all = "warn"
