[package]
name = "recap-worker"
version = "0.1.0"
edition = "2024"
description = "Alt 7days Recap batch worker (CPU-centric) with Axum control plane and Prometheus/OTLP telemetry."
repository = "https://github.com/Kaikei-e/Alt"

[features]
default = []
# with-sudachi feature is disabled because sudachi crate is not available on crates.io
# with-sudachi = ["dep:sudachi"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "json", "tokio"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
once_cell = "1.21"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "gzip",
  "http2",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.48", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "sync",
  "time",
] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = [
  "grpc-tonic",
  "http-proto",
] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["clock", "std", "serde"] }
futures = "0.3"
unicode-normalization = "0.1"
unicode-segmentation = "1.12"
whatlang = { version = "0.16", default-features = false }
lindera = { version = "0.21", features = ["ipadic"] }
# sudachi = { version = "0.7", optional = true }  # Not available on crates.io
ammonia = "4.1"
html2text = "0.13"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "chrono",
] }
jsonschema = "0.26"
rand = "0.8"
md5 = "0.7"
num_cpus = "1.17"
prometheus = "0.13"
rayon = "1.11"
rustc-hash = "1.1"
smallvec = "1.15"
regex = "1.12"
aho-corasick = "1.1"
fst = "0.4"
rust-bert = "0.23.0"
console = "0.16"

[dev-dependencies]
futures = "0.3"
hyper = "1.0"
hyper-util = { version = "0.1", features = [
  "client",
  "http1",
  "http2",
  "server",
] }
rstest = "0.22"
tokio = { version = "1.48", features = ["rt", "macros"] }
wiremock = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }
testcontainers = "0.16"

[[bench]]
name = "performance"
harness = false

[[bin]]
name = "replay_genre_pipeline"
path = "../scripts/replay_genre_pipeline.rs"
