[package]
name = "recap-worker"
version = "0.1.0"
edition = "2024"
description = "Alt 7days Recap batch worker (CPU-centric) with Axum control plane and Prometheus/OTLP telemetry."
repository = "https://github.com/Kaikei-e/Alt"

[features]
default = []
# with-sudachi feature is disabled because sudachi crate is not available on crates.io
# with-sudachi = ["dep:sudachi"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "json", "tokio"] }
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "gzip",
  "http2",
  "rustls",
  "blocking",
] }
# axum-server with rustls for mTLS receiving side.
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rustls-pemfile = "2.2"
tokio-rustls = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.52", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "sync",
  "time",
] }
tokio-util = "0.7"
tokenizers = { version = "0.23", default-features = false, features = [
  "onig",
  "http",
] }
tower = "0.5"
tower-http = { version = "0.7", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
tracing-opentelemetry = "0.33"
opentelemetry = { version = "0.32", features = ["trace"] }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = [
  "grpc-tonic",
  "http-proto",
] }
uuid = { version = "1.23", features = ["v4", "v5", "v7", "serde"] }
# base64 is needed by the knowledge_sovereign client to encode the
# protojson `bytes` payload field (Wave 4-B, ADR-000853 §6.4.1).
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "std", "serde"] }
futures = "0.3"
unicode-normalization = "0.1"
unicode-segmentation = "1.13"
lingua = { version = "1.8", default-features = false, features = [
  "english",
  "japanese",
] }
lindera = { version = "0.21", features = ["ipadic"] }
# sudachi = { version = "0.7", optional = true }  # Not available on crates.io
ammonia = "4.1"
html2text = "0.17"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sqlx = { version = "0.9", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "chrono",
] }
jsonschema = "0.46"
rand = "0.10"
md5 = "0.8"
num_cpus = "1.17"
prometheus = { version = "0.14", default-features = false }
rayon = "1.12"
rustc-hash = "2.1"
smallvec = "1.15"
regex = "1.12"
aho-corasick = "1.1"
fst = "0.4"
rust-bert = "0.23.0"
console = "0.16"
ndarray = { version = "0.17", features = ["serde", "rayon"] }
petgraph = "0.8"
sprs = "0.11"
tikv-jemallocator = { version = "0.7", features = ["unprefixed_malloc_on_supported_platforms"] }

[dev-dependencies]
futures = "0.3"
hyper = "1.10"
hyper-util = { version = "0.1", features = [
  "client",
  "http1",
  "http2",
  "server",
] }
filetime = "0.2"
rcgen = "0.14"
rstest = "0.26"
tokio = { version = "1.52", features = ["rt", "macros"] }
wiremock = "0.6"
criterion = { version = "0.8", features = ["html_reports"] }
testcontainers = "0.27"
temp-env = { version = "0.3", features = ["async_closure"] }
tempfile = "3.27"
pact_consumer = "1.4"
pact_models = "1.3"

[[bench]]
name = "performance"
harness = false

[[bin]]
name = "replay_genre_pipeline"
path = "../scripts/replay_genre_pipeline.rs"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = true

# Lint policy lives in Cargo.toml (DECREE §13). Promote warnings to errors in
# CI via `cargo clippy -- -D warnings` rather than `#![deny(warnings)]` in
# lib.rs, so toolchain upgrades that introduce new lints do not silently break
# local builds until CI catches them. Pedantic allows below were previously
# crate-level `#![allow]` in lib.rs; they must live here so bins/tests inherit.
[lints.rust]
unexpected_cfgs = "warn"

[lints.clippy]
# Groups at priority -1 so per-lint allows below can override.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Acceptable for trait naming consistency (e.g., RecapDao, RecapDaoImpl)
module_name_repetitions = "allow"
# Required for ML/statistics: f64 → f32 conversions for BERT embeddings
cast_precision_loss = "allow"
# Necessary for embedding dimension conversions: usize ↔ i32/u32
cast_possible_truncation = "allow"
# Required for signed/unsigned conversions in DB queries and pagination
cast_possible_wrap = "allow"
# Domain logic often requires helper declarations mid-function
items_after_statements = "allow"
# Error context via anyhow::Context already provides sufficient documentation
missing_errors_doc = "allow"
# Panic paths are defensive (e.g., mutex poisoning), not part of normal flow
missing_panics_doc = "allow"
# Technical identifiers (e.g., XXH3, BERT, TF-IDF) don't need markdown formatting
doc_markdown = "allow"
# Explicit closures improve clarity for complex async chains
redundant_closure = "allow"
# Named format args reduce readability for long messages with many placeholders
uninlined_format_args = "allow"
# if-let-else patterns are clearer than map_or for error handling flows
option_if_let_else = "allow"
# or_else() allocation overhead negligible; or() preferred for readability
or_fun_call = "allow"
# Pass-by-value necessary for async trait methods (Arc, Config types)
needless_pass_by_value = "allow"
# Too noisy: many utility methods return useful values but aren't always used
must_use_candidate = "allow"
# Nested conditions improve readability when branches are semantically distinct
collapsible_if = "allow"
# for x in iter.iter() is clearer than for x in &iter for consistency
explicit_iter_loop = "allow"
